# poc-gpu-likelihood-calculation

./: .gitignore  CMakeLists.txt  main.cpp
alignment/: Alignment.cpp  Alignment.h  Pattern.cpp  Pattern.h  alignmentIO.cpp  alignmentIO.h
build-scripts/: openacc_build.sh
example/: alignment.phy  alisim_simulation.sh  tree.nwk
example/100taxa/: alignment.phy  tree.nwk
example/4taxa/: alignment.phy
helper/: Matrix.cpp  Matrix.h  MatrixOp.h  MatrixOpCPU.cpp  MatrixOpCPU.h  MatrixOpCuBLAS.cpp  MatrixOpCuBLAS.h  MatrixOpDispatcher.h  MatrixOpFactory.cpp  MatrixOpFactory.h  MatrixOpOpenACC.cpp  MatrixOpOpenACC.h  MatrixOpOpenMPGPU.cpp  MatrixOpOpenMPGPU.h  MatrixOpType.h  MatrixUtils.h
helper/Eigen/: EigenUtils.cpp  EigenUtils.h
helper/logger/: Logger.cpp  Logger.h
model/: Model.cpp  Model.h  ModelJC.cpp  ModelJC.h
scripts/: test_script.sh
scripts/benchmark/: benchmark.sh
scripts/build-scripts/: build_normal.sh  eigen_build.sh
test/helper/: testMatrix.cpp
tree/: CMakeLists.txt  LikelihoodCalculator.cpp  LikelihoodCalculator.h  Node.cpp  Node.h  Tree.cpp  Tree.h  TreeReader.cpp  TreeReader.h  TreeUtils.h
